src/objects/CourseraContent__c.object
<CustomObject>
    <description>Customer Content Needs</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_job_requires_writing_Software__c</fullName>
        <label>Any job requires writing Software?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Status__c</fullName>
        <formula>Opportunity__r.Account.B2B_Acct_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buzzwords__c</fullName>
        <inlineHelpText>Are there any &apos;buzzwords&apos; that seem to be important to this client (e.g., &quot;customer-centricity&apos;, &apos;digital transformation&apos;, &apos;industry 4.0&apos;)?</inlineHelpText>
        <label>Buzzwords</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories_of_Courses__c</fullName>
        <inlineHelpText>What categories of courses are being asked for? (check all that apply)</inlineHelpText>
        <label>Categories of Courses</label>
        <picklist>
            <picklistValues>
                <fullName>Data Science, including Machine Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science/Programming/Software Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Skills/Soft Skills/Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing, Sales, Persuasion or Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Skills/Digital Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Language Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching and Professional Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering (Mechanical, Electrical, Chemical, Civil, Materials, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competency_Mapping_Required__c</fullName>
        <inlineHelpText>Is the client asking us to map our content to a specific set of corporate competencies that they have delivered?</inlineHelpText>
        <label>Competency Mapping Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Curation_Format__c</fullName>
        <inlineHelpText>In what format would you like the content curated?</inlineHelpText>
        <label>Content Curation Format</label>
        <picklist>
            <picklistValues>
                <fullName>Fully designed slide deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formatted list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal written list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No external curation needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Curation_Status__c</fullName>
        <label>Content Curation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Strategy_Team_Member__c</fullName>
        <label>Content Strategy Team Member</label>
        <picklist>
            <picklistValues>
                <fullName>Scott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jonathan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heliatrice</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <inlineHelpText>Which content types is the client looking for? (Check all that apply)</inlineHelpText>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specializations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degrees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Course_Content_Outcome__c</fullName>
        <inlineHelpText>The course content should be selected to</inlineHelpText>
        <label>Course Content Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>maximize learner engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>map closely content areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>demonstrate ability to map content to target audience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>highlight the &apos;best&apos; courses on Coursera that are at all relevant.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>highlight our best known university brands and/or most famous professors.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Describe_specific_content_needs__c</fullName>
        <inlineHelpText>Please describe in greater detail (if possible) what the customer is looking for in terms of specific content areas. Add as much detail as you can, as any additional detail will help us pull the right content for your client.</inlineHelpText>
        <label>Describe specific content needs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>PST</inlineHelpText>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Roles__c</fullName>
        <label>Job Level</label>
        <picklist>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Contributor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>Opportunity Owner created mainly to be used in content related Email Templates</description>
        <formula>Opportunity__r.Owner.FirstName + &apos; &apos; + Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CourseraContent</relationshipLabel>
        <relationshipName>CourseraContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Per_learner_courses__c</fullName>
        <inlineHelpText>How many courses per learner do you expect the client to buy?</inlineHelpText>
        <label>Per learner courses</label>
        <picklist>
            <picklistValues>
                <fullName>1 per learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 per learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 per learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 per learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool of enrollments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Landscape__c</fullName>
        <inlineHelpText>If this is technology content, please describe as much as you know about the company’s technology stack (e.g. programming languages, frameworks, libraries, software, cloud infrastructure, hardware, etc)?</inlineHelpText>
        <label>Technology Landscape</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tools_Languages_Used__c</fullName>
        <inlineHelpText>If the content is related to Data Analytics, please describe any tools or languages that the customer uses:</inlineHelpText>
        <label>Data Analytics Tools &amp; Languages Used</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_choice__c</fullName>
        <inlineHelpText>Is there employee choice in this implementation?</inlineHelpText>
        <label>Employee Choice?</label>
        <picklist>
            <picklistValues>
                <fullName>Major Employee Choice: employees choose from a large set of course options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some Employee Choice: employees choose from a small set of courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Employee Choice: Employees are expected to take all courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know/No client preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CourseraContent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Describe_specific_content_needs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Content Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CourseraContent</pluralLabel>
    <recordTypes>
        <fullName>Curated</fullName>
        <active>true</active>
        <label>Curated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>